[package]
name = "rusty-driver"
edition = "2018"
version = "0.2.0"

description = "A high level API for controlling a web browser with webdriver. Currently requires a nightly compiler due to use of async-await."

authors = ["Eric Stokes <letaris@gmail.com>"]

documentation = "https://docs.rs/rusty-driver"
homepage = "https://github.com/estokes/rusty-driver"
repository = "https://github.com/estokes/rusty-driver.git"

keywords = ["webdriver", "chromedriver", "geckodriver", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

license = "MIT"

[dependencies]
webdriver = "0.39"
url = "1.7"
tokio = {version = "0.1", features = ["async-await-preview"]}
tokio-timer = "0.2"
http = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
error-chain = "0.12"
serde = "1.0"
serde_json = "1.0"
