[package]
name = "rusty-driver"
edition = "2018"
version = "0.3.2"

description = "A high level async API for controlling a web browser with webdriver."

authors = ["Eric Stokes <letaris@gmail.com>"]

documentation = "https://docs.rs/rusty-driver"
homepage = "https://github.com/estokes/rusty-driver"
repository = "https://github.com/estokes/rusty-driver.git"

keywords = ["webdriver", "chromedriver", "geckodriver", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

license = "MIT"

[dependencies]
webdriver = "0.43"
url = "2"
futures = "0.3"
tokio = { version = "1", features = ["time", "rt"] }
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
hyper-tls = "0.5"
error-chain = "0.12"
serde = "1"
serde_json = "1"
bytes = "1"

